# bsp2fe2data_for_training

./: README.md
bsp2fe/: pyproject.toml
bsp2fe/bsp2fe/: __init__.py  builder.py
bsp2fe/tests/: test_single_step_pressure_case.py
bsp2fe/tests/data/: Surface-0_iter-100.npz  Surface-1_iter-100.npz  Surface-2_iter-100.npz  Surface-3_iter-100.npz  Surface-4_iter-100.npz
control_point_sampling/: pyproject.toml
control_point_sampling/outputs/smoke_run/: manifest.jsonl  summary.json
control_point_sampling/tests/: test_control_point_sampling.py
forward_surrogate_data_gen/: pyproject.toml
forward_surrogate_data_gen/outputs/dataset_run/: manifest.jsonl  summary.json
forward_surrogate_data_gen/outputs/dataset_run/samples/: iter-1__cavity1__p_0p020000.npz  iter-2__cavity1__p_0p020000.npz  iter-3__cavity1__p_0p020000.npz
forward_surrogate_data_gen/outputs/dataset_run/work/iter-1__cavity1__p_0p020000/: TopOptRun.inp  __surface-0.stp  __surface-1.stp
forward_surrogate_data_gen/outputs/dataset_run/work/iter-2__cavity1__p_0p020000/: TopOptRun.inp  __surface-0.stp  __surface-1.stp
forward_surrogate_data_gen/outputs/dataset_run/work/iter-3__cavity1__p_0p020000/: TopOptRun.inp  __surface-0.stp  __surface-1.stp
forward_surrogate_data_gen/outputs/geometry_cli_smoke_input/: Surface-0_iter-1.npz  Surface-0_iter-2.npz  Surface-0_iter-3.npz  Surface-1_iter-1.npz  Surface-1_iter-2.npz  Surface-1_iter-3.npz
forward_surrogate_data_gen/src/forward_surrogate_data_gen/: __init__.py  exporter.py  generate_dataset.py
forward_surrogate_data_gen/tests/: test_exporter_helpers.py
(+12 files in other folders)
